prqlc/prqlc/tests/integration/snapshots/integration__queries__compile__constants_only.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from genres\ntake 10\nfilter true\ntake 20\nfilter true\nselect d = 10\n"
input_file: prqlc/prqlc/tests/integration/queries/constants_only.prql
---
WITH
table_1 AS (
  SELECT
    NULL
  FROM
    genres
  LIMIT
    10
),
table_0 AS (
  SELECT
    NULL
  FROM
    table_1
  WHERE
    true
  LIMIT
    20
)
SELECT
  10 AS d
FROM
  table_0
WHERE
  true
