prqlc/prqlc/tests/integration/snapshots/integration__queries__compile__distinct.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "# mssql:test\nfrom tracks\nselect {album_id, genre_id}\ngroup tracks.* (take 1)\nsort tracks.*\n"
input_file: prqlc/prqlc/tests/integration/queries/distinct.prql
snapshot_kind: text
---
WITH table_0 AS (
  SELECT
    DISTINCT album_id,
    genre_id
  FROM
    tracks
)
SELECT
  album_id,
  genre_id
FROM
  table_0
ORDER BY
  album_id,
  genre_id
