prqlc/prqlc/tests/integration/snapshots/integration__queries__compile__sort_cast_filter_join_select_with_alias.snap
---
source: prqlc/prqlc/tests/integration/queries.rs
expression: "from albums\nselect { this.`title`, this.`artist_id` }\nsort { this.`artist_id` }\nderive { `double_artist_id` = as `double precision` this.`artist_id` }\nfilter (this.`artist_id` != null)\njoin side:left artists (this.`double_artist_id` == that.`artist_id`)\nselect {this.`double_artist_id`, this.`title`, this.`name`}\n"
input_file: prqlc/prqlc/tests/integration/queries/sort_cast_filter_join_select_with_alias.prql
---
WITH table_1 AS (
  SELECT
    CAST(artist_id AS double precision) AS double_artist_id,
    title,
    artist_id
  FROM
    albums
),
table_2 AS (
  SELECT
    double_artist_id,
    title,
    artist_id
  FROM
    table_1
  WHERE
    artist_id IS NOT NULL
),
table_0 AS (
  SELECT
    double_artist_id,
    title,
    artist_id
  FROM
    table_2
)
SELECT
  table_0.double_artist_id,
  table_0.title,
  artists.name
FROM
  table_0
  LEFT OUTER JOIN artists ON table_0.double_artist_id = artists.artist_id
ORDER BY
  table_0.artist_id
